--- a/dj-rubin.de/main_page.html
+++ b/dj-rubin.de/main_page.html
@@ -12,7 +12,7 @@
 
   <title>DJ Rubin</title>
 
-  <link rel="icon" href="Logo/DJR_Aufkleber_weiß_oS_oH_scaled.png" type="image/icon type">
+  <link rel="icon" href="pictures/Logo/DJR_Aufkleber_weiß_oS_oH_scaled.png" type="image/icon type">
 
   <style type="text/css">
     #navbar_logo {
@@ -113,7 +113,7 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <img src="Titelbild.JPG" class="d-block w-100" alt="...">
+        <img src="pictures/Titelbild.JPG" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Dj Rubin</h5>
           <p>Ready for your party!</p>
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="Bilder Auflegen/9X5A0314.JPG" class="d-block img-fluid" alt="...">
+        <img src="pictures/Bilder_Auflegen/9X5A0314.JPG" class="d-block img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Explosion</h5>
           <p>Deine neue Partyreihe in deiner Region!</p>
