--- a/dj-rubin.de/main_page.html
+++ b/dj-rubin.de/main_page.html
@@ -15,6 +15,15 @@
   <link rel="icon" href="pictures/Logo/DJR_Aufkleber_weiß_oS_oH_scaled.png" type="image/icon type">
 
   <style type="text/css">
+    p {
+      font-size: larger;
+      text-align: justify;
+    }
+
+    .icon {
+      width: 40px;
+    }
+
     #navbar_logo {
       width: 80px;
       margin: -10px;
@@ -60,9 +69,9 @@
   <!--Navbar-->
 
   <!--navbar-expand-md: over which width the navbar expands-->
- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar">
+ <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark fixed-top" id="navbar">
 
-    <div class="container-fluid">
+    <div class="container-xl">
 
       <a class="navbar-brand" href="#">
         <img src="pictures/Logo/DJR_Aufkleber_weiß_oS_oH.png" id="navbar_logo">
@@ -78,6 +87,9 @@
             <a class="nav-link active" aria-current="page" href="#">Next Dates</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Booking</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Promo Sets</a>
           </li>
           <li class="nav-item">
@@ -86,9 +98,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Gallery</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Booking</a>
-          </li>
+
 
 
         </ul>
@@ -146,7 +156,53 @@
 
 </div>
 
+<img src="pictures/Logo/DJR_Aufkleber_schwarz_oS_oH.png" class="col-6 rounded mx-auto d-block pt-4">
 
+<!--About me -->
+
+  <div class="container clearfix py-4 px-0">
+
+    <img src="pictures/IMG_0651_square.JPG" class="rounded col-4 float-start mb-3 me-3">
+
+    <h1 class="pb-3">Let's get the party started! </h1>
+
+    <p>
+      Egal ob Geburtstag, Hochzeit, Firmenfeier oder Plattenparty, 
+      es wäre mir ein Ehre bei Dir aufzulegen und die Gäste so richtig in Partystimmung zu bringen.
+      Mein Musikrepertoire reicht von 80er/90er über House bis hin zur klassischen Foxtanz Musik. 
+      Überzeug Dich einfach selbst und hör dir eins meiner Promo Sets an. Außerdem findest du in der Galierie zahlreiche Bilder meine Auftritte.
+    </p>
+
+    <p>Du brauchst für deine Feier die Technik aber keinen DJ? Natürlich kannst auch einfach nur unsere Licht- und Tontechnik ausleihen.</p>
+    <p>Schau doch mal im Reiter "Booking", ob etwas passendes dabei ist.</p>
+    <p>Wenn du fündig geworden bist oder Fragen hast, schreibe mir einfach über das Kontakformular. Ich freue mich schon von dir zu hören!</p>
+
+    <div class="row align-items-center">
+      <div class="col-1">
+        <img src="pictures/Icons/Instagram_Icon_bubbles.png" class="icon">
+      </div>
+      <div class="col-11">
+        <a href="https://www.instagram.com/dj_rubin_official/">@dj_rubin_official</a>
+      </div>
+
+      <div class="col-1">
+        <img src="pictures/Icons/Facebook_Icon_Bubbles.png" class="icon">
+      </div>
+      <div class="col-11">
+        <a href="https://www.facebook.com/rubinDJ/">facebook.com/rubinDJ/</a>
+      </div>
+
+      <div class="col-1">
+        <img src="pictures/Icons/email_icon.png" class="icon">
+      </div>
+      <div class="col-11">
+        <a href="mailto: dj_rubin_official@outlook.de">dj_rubin_official@outlook.de</a>
+      </div>
+
+
+    </div>
+
+  </div>
 
 
 
@@ -156,6 +212,12 @@
     crossorigin="anonymous"></script>
 
 
+
+
+
+
 </body>
+
+
 
 </html>
