too many changes

--- a/dj-rubin.de/temp.html
+++ b/dj-rubin.de/temp.html
@@ -11,6 +11,96 @@
 
     <body>
 
-        <img src="">
+        <!-- Tablle zu den Preisen-->
+
+        <div class="container-xl">
+            <h2>Vollständige Liste aller Pakete (nur Technik)</h2>
+
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col" class="col-1 center">Paket Nr.</th>
+                    <th scope="col" class="col-9 table_align_left">Equipment</th>
+                    <th scope="col" class="col-1">Personen</th>
+                    <th scope="col" class="col-1">Aufbau</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td class="table_align_left">2x 4" Lautsprecher mit 1x passiven 12" Subwoofer mit eingemessenen Verstärker und Bluetooth</td>
+                    <td>30</td>
+                    <td>Nein</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td class="table_align_left">2x 4" Lautsprecher mit 2x passiven 12" Subwoofer mit eingemessenen Verstärker und Bluetooth</td>
+                    <td>50</td>
+                    <td>Nein</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td class="table_align_left">2x 10" Lautsprecher mit 2x passiven 12" Subwoofer mit eingemessenen Verstärker und Bluetooth</td>
+                    <td>80</td>
+                    <td>Nein</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td class="table_align_left">2x 10" Lautsprecher mit 2x passiven 12" Subwoofer mit eingemessenen Verstärker und Bluetooth</td>
+                    <td>100 - 150</td>
+                    <td>Nein</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td class="table_align_left">2x 12" Fullrange Lautsprecher (hohe Leistung), 2 Lichter, kleine Nebelmaschine</td>
+                    <td>150</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td class="table_align_left">2x 10" Lautsprecher mit aktivem 18" Subwoofer, 2 Lichter, kleine Nebelmaschine </td>
+                    <td>150</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td class="table_align_left">2x 10" Lautsprecher mit aktivem 18" Subwoofer, 2 Lichter, 4 Moving Heads, große Nebelmaschine und Traverse (2,5 m)</td>
+                    <td>150</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">8</th>
+                    <td class="table_align_left">2x 12" Fullrange Lautsprecher (hohe Leistung), 4 passive 15" Subwoofer, 2 Traversentower, 2 Lichter, große Nebelmaschine</td>
+                    <td>300</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">9</th>
+                    <td class="table_align_left">2x 12" Fullrange Lautsprecher, 6 passive 15" Subwoofer, 4 Meter Traverse, 8 Movingheads, 2 Blinder, große Nebelmaschine</td>
+                    <td>400</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">10</th>
+                    <td class="table_align_left">2 horngeladene Lautsprecher, 8 passive 15" Subwoofer, 6 Meter Traverse, 8 Movingheads, 6 Blinder, 6 Stroboskop, große Nebelmaschine</td>
+                    <td>500 - 600</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">11</th>
+                    <td class="table_align_left"> 22 horngeladene Lautsprecher, 12 passive 15" Subwoofer, 8 Meter Traverse, kleine Traverse, 12 Movingheads, 10 Blinder, 10 Stroboskope, 2 Nebelmaschinen, 12 Scheinwerfer, LED Bars</td>
+                    <td>800</td>
+                    <td>Ja</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">12</th>
+                    <td class="table_align_left">Ambientelicht</td>
+                    <td>-</td>
+                    <td>-</td>
+                  </tr>
+                </tbody>
+              </table>
+
+        </div>
 
     </body>
